// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<View
  config={
    Object {
      "directionalOffsetThreshold": 160,
    }
  }
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  onSwipeLeft={[Function]}
  style={
    Object {
      "backgroundColor": "#00b4d5",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#00b4d5",
        "flex": 1,
        "justifyContent": "space-around",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <View
        collapsable={undefined}
        style={
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.1)",
            "borderRadius": 9999999,
            "margin": 20,
          }
        }
      >
        <Image
          collapsable={undefined}
          resizeMode="cover"
          source={1337}
          style={
            Object {
              "borderRadius": 100,
              "height": 200,
              "margin": 20,
              "width": 200,
            }
          }
        />
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginLeft": -70,
            "marginRight": 20,
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#73dbff",
              "borderRadius": 9999,
              "elevation": 10,
              "height": 55,
              "justifyContent": "center",
              "padding": 5,
              "shadowColor": "rgba(0, 0, 0, 0.1)",
              "shadowOffset": Object {
                "height": 4,
                "width": 4,
              },
              "shadowOpacity": 1,
              "shadowRadius": 0,
              "width": 55,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.2)",
                "borderColor": "#ffffff",
                "borderRadius": 9999,
              },
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#73dbff",
                  "elevation": 5,
                  "justifyContent": "center",
                  "opacity": 1,
                  "shadowColor": "rgba(0, 0, 0, 0.1)",
                  "shadowOffset": Object {
                    "height": 4,
                    "width": 4,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 0,
                },
                Array [
                  Object {
                    "marginLeft": 5,
                    "marginRight": 5,
                  },
                  false,
                ],
              ],
              Object {},
            ]
          }
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "alignItems": "center",
                "height": 60,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 60,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              collapsable={undefined}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#ffffff",
                  "fontFamily": "norddruck",
                  "fontSize": 35,
                  "marginTop": 5,
                  "textAlign": "center",
                }
              }
            >
              BB
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.2)",
                "borderColor": "#ffffff",
                "borderRadius": 9999,
              },
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#73dbff",
                  "elevation": 5,
                  "justifyContent": "center",
                  "opacity": 1,
                  "shadowColor": "rgba(0, 0, 0, 0.1)",
                  "shadowOffset": Object {
                    "height": 4,
                    "width": 4,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 0,
                },
                Array [
                  Object {
                    "marginLeft": 5,
                    "marginRight": 5,
                  },
                  Object {
                    "borderWidth": 3,
                  },
                ],
              ],
              Object {},
            ]
          }
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "alignItems": "center",
                "height": 60,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 60,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              collapsable={undefined}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#ffffff",
                  "fontFamily": "norddruck",
                  "fontSize": 35,
                  "marginTop": 5,
                  "textAlign": "center",
                }
              }
            >
              BB
            </Text>
            <View
              collapsable={undefined}
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderRadius": 1,
                  "height": 3.5,
                  "opacity": 0.8,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotate": "-45deg",
                    },
                  ],
                  "width": 60,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
        Object {
          "top": 35,
        },
        Object {
          "left": 15,
        },
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#73dbff",
            "borderRadius": 9999,
            "elevation": 10,
            "height": 40,
            "justifyContent": "center",
            "padding": 5,
            "shadowColor": "rgba(0, 0, 0, 0.1)",
            "shadowOffset": Object {
              "height": 4,
              "width": 4,
            },
            "shadowOpacity": 1,
            "shadowRadius": 0,
            "width": 40,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
        Object {
          "top": 35,
        },
        Object {
          "right": 15,
        },
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#dbf5f5",
            "borderRadius": 9999,
            "elevation": 10,
            "height": 40,
            "justifyContent": "center",
            "padding": 5,
            "shadowColor": "rgba(0, 0, 0, 0.1)",
            "shadowOffset": Object {
              "height": 4,
              "width": 4,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
            "width": 40,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[` 2`] = `
<View
  config={
    Object {
      "directionalOffsetThreshold": 160,
    }
  }
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  onSwipeLeft={[Function]}
  style={
    Object {
      "backgroundColor": "#b5ce4d",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#00b4d5",
        "flex": 1,
        "justifyContent": "space-around",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <View
        collapsable={undefined}
        style={
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.1)",
            "borderRadius": 9999999,
            "margin": 20,
          }
        }
      >
        <Image
          collapsable={undefined}
          resizeMode="cover"
          source={1337}
          style={
            Object {
              "borderRadius": 100,
              "height": 200,
              "margin": 20,
              "width": 200,
            }
          }
        />
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginLeft": -70,
            "marginRight": 20,
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#73dbff",
              "borderRadius": 9999,
              "elevation": 10,
              "height": 55,
              "justifyContent": "center",
              "padding": 5,
              "shadowColor": "rgba(0, 0, 0, 0.1)",
              "shadowOffset": Object {
                "height": 4,
                "width": 4,
              },
              "shadowOpacity": 1,
              "shadowRadius": 0,
              "width": 55,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.2)",
                "borderColor": "#73dbff",
                "borderRadius": 9999,
              },
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#73dbff",
                  "elevation": 5,
                  "justifyContent": "center",
                  "opacity": 1,
                  "shadowColor": "rgba(0, 0, 0, 0.1)",
                  "shadowOffset": Object {
                    "height": 4,
                    "width": 4,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 0,
                },
                Array [
                  Object {
                    "marginLeft": 5,
                    "marginRight": 5,
                  },
                  false,
                ],
              ],
              Object {
                "backgroundColor": "#ffffff",
              },
            ]
          }
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "alignItems": "center",
                "height": 60,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 60,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              collapsable={undefined}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#73dbff",
                  "fontFamily": "norddruck",
                  "fontSize": 35,
                  "marginTop": 5,
                  "textAlign": "center",
                }
              }
            >
              BB
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.2)",
                "borderColor": "#ffffff",
                "borderRadius": 9999,
              },
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#73dbff",
                  "elevation": 5,
                  "justifyContent": "center",
                  "opacity": 1,
                  "shadowColor": "rgba(0, 0, 0, 0.1)",
                  "shadowOffset": Object {
                    "height": 4,
                    "width": 4,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 0,
                },
                Array [
                  Object {
                    "marginLeft": 5,
                    "marginRight": 5,
                  },
                  Object {
                    "borderWidth": 3,
                  },
                ],
              ],
              Object {},
            ]
          }
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "alignItems": "center",
                "height": 60,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 60,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              collapsable={undefined}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#ffffff",
                  "fontFamily": "norddruck",
                  "fontSize": 35,
                  "marginTop": 5,
                  "textAlign": "center",
                }
              }
            >
              BB
            </Text>
            <View
              collapsable={undefined}
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderRadius": 1,
                  "height": 3.5,
                  "opacity": 0.8,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotate": "-45deg",
                    },
                  ],
                  "width": 60,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
        Object {
          "top": 35,
        },
        Object {
          "left": 15,
        },
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#73dbff",
            "borderRadius": 9999,
            "elevation": 10,
            "height": 40,
            "justifyContent": "center",
            "padding": 5,
            "shadowColor": "rgba(0, 0, 0, 0.1)",
            "shadowOffset": Object {
              "height": 4,
              "width": 4,
            },
            "shadowOpacity": 1,
            "shadowRadius": 0,
            "width": 40,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
        Object {
          "top": 35,
        },
        Object {
          "right": 15,
        },
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#73dbff",
            "borderRadius": 9999,
            "elevation": 10,
            "height": 40,
            "justifyContent": "center",
            "padding": 5,
            "shadowColor": "rgba(0, 0, 0, 0.1)",
            "shadowOffset": Object {
              "height": 4,
              "width": 4,
            },
            "shadowOpacity": 1,
            "shadowRadius": 0,
            "width": 40,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[` 3`] = `
<View
  config={
    Object {
      "directionalOffsetThreshold": 160,
    }
  }
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  onSwipeLeft={[Function]}
  style={
    Object {
      "backgroundColor": "#00b4d5",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#00b4d5",
        "flex": 1,
        "justifyContent": "space-around",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <View
        collapsable={undefined}
        style={
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.1)",
            "borderRadius": 9999999,
            "margin": 20,
          }
        }
      >
        <Image
          collapsable={undefined}
          resizeMode="cover"
          source={1337}
          style={
            Object {
              "borderRadius": 100,
              "height": 200,
              "margin": 20,
              "width": 200,
            }
          }
        />
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginLeft": -70,
            "marginRight": 20,
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#73dbff",
              "borderRadius": 9999,
              "elevation": 10,
              "height": 55,
              "justifyContent": "center",
              "padding": 5,
              "shadowColor": "rgba(0, 0, 0, 0.1)",
              "shadowOffset": Object {
                "height": 4,
                "width": 4,
              },
              "shadowOpacity": 1,
              "shadowRadius": 0,
              "width": 55,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.2)",
                "borderColor": "#ffffff",
                "borderRadius": 9999,
              },
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#73dbff",
                  "elevation": 5,
                  "justifyContent": "center",
                  "opacity": 1,
                  "shadowColor": "rgba(0, 0, 0, 0.1)",
                  "shadowOffset": Object {
                    "height": 4,
                    "width": 4,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 0,
                },
                Array [
                  Object {
                    "marginLeft": 5,
                    "marginRight": 5,
                  },
                  false,
                ],
              ],
              Object {},
            ]
          }
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "alignItems": "center",
                "height": 60,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 60,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              collapsable={undefined}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#ffffff",
                  "fontFamily": "norddruck",
                  "fontSize": 35,
                  "marginTop": 5,
                  "textAlign": "center",
                }
              }
            >
              BB
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.2)",
                "borderColor": "#73dbff",
                "borderRadius": 9999,
              },
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#73dbff",
                  "elevation": 5,
                  "justifyContent": "center",
                  "opacity": 1,
                  "shadowColor": "rgba(0, 0, 0, 0.1)",
                  "shadowOffset": Object {
                    "height": 4,
                    "width": 4,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 0,
                },
                Array [
                  Object {
                    "marginLeft": 5,
                    "marginRight": 5,
                  },
                  Object {
                    "borderWidth": 3,
                  },
                ],
              ],
              Object {
                "backgroundColor": "#ffffff",
              },
            ]
          }
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "alignItems": "center",
                "height": 60,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 60,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              collapsable={undefined}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#73dbff",
                  "fontFamily": "norddruck",
                  "fontSize": 35,
                  "marginTop": 5,
                  "textAlign": "center",
                }
              }
            >
              BB
            </Text>
            <View
              collapsable={undefined}
              style={
                Object {
                  "backgroundColor": "#73dbff",
                  "borderRadius": 1,
                  "height": 3.5,
                  "opacity": 0.8,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotate": "-45deg",
                    },
                  ],
                  "width": 60,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
        Object {
          "top": 35,
        },
        Object {
          "left": 15,
        },
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#73dbff",
            "borderRadius": 9999,
            "elevation": 10,
            "height": 40,
            "justifyContent": "center",
            "padding": 5,
            "shadowColor": "rgba(0, 0, 0, 0.1)",
            "shadowOffset": Object {
              "height": 4,
              "width": 4,
            },
            "shadowOpacity": 1,
            "shadowRadius": 0,
            "width": 40,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
        Object {
          "top": 35,
        },
        Object {
          "right": 15,
        },
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#73dbff",
            "borderRadius": 9999,
            "elevation": 10,
            "height": 40,
            "justifyContent": "center",
            "padding": 5,
            "shadowColor": "rgba(0, 0, 0, 0.1)",
            "shadowOffset": Object {
              "height": 4,
              "width": 4,
            },
            "shadowOpacity": 1,
            "shadowRadius": 0,
            "width": 40,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        />
      </View>
    </View>
  </View>
</View>
`;
